# micro-shop

./: items_views.py  main.py  pyproject.toml
alembic/versions/: 2023_10_10_2021-ecd7596f04de_create_products_table.py  2023_10_10_2033-ef3c2c9e2dad_create_users_table.py  2023_10_10_2053-fb01ff1880da_create_posts_table.py  2023_10_10_2100-adfb8225644d_delete_2_colomns_in_users_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  post.py  user.py
users/: crud.py  schemas.py
